[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qupkake"
version = "1.0.0"
description = "Predict micro-pKa of organic molecules"
readme = "README.md"
authors = [
    { name = "Omri D Abarbanel", email = "oda6@pitt.edu" }
]
license = { text = "BSD-3-Clause" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0",
    "pytorch-lightning>=2.0.2",
    "torchmetrics",
    "torchvision",
    "numpy>=1.25",
    "pandas>=2.1",
    "rdkit>=2022.03.3",
    "scipy>=1.11",
    "torch-geometric>=2.3",
]

[project.urls]
"Source" = "https://github.com/shualdon/qupkake/"
"Documentation" = "https://qupkake.readthedocs.io/"

[project.optional-dependencies]
test = [
    "pytest>=6.1.2",
    "pytest-cov",
]
dev = [
    "pytest>=6.1.2",
    "pytest-cov",
    "codecov",
]

[project.scripts]
qupkake = "qupkake.cli:main"

# UV-specific configuration
[tool.uv]
# PyTorch and torch-geometric wheel sources
# For macOS (ARM64), PyTorch wheels on PyPI include MPS (Metal) support by default
# No special index needed for CPU/MPS on Apple Silicon

# For torch-geometric extensions (torch-scatter, torch-sparse, etc.)
# We use find-links to get the correct wheels
find-links = [
    "https://data.pyg.org/whl/torch-2.5.0+cpu.html",
]

# Hatch build configuration
[tool.hatch.build.targets.wheel]
packages = ["qupkake"]

[tool.hatch.build.targets.sdist]
include = [
    "/qupkake",
    "/README.md",
    "/LICENSE",
]

# Include package data
[tool.hatch.build.targets.wheel.force-include]
"qupkake/xtb-641" = "qupkake/xtb-641"

# Coverage configuration (preserved from original)
[tool.coverage.run]
omit = [
    "*/tests/*",
    "qupkake/_version.py",
]

# Code style configuration (preserved from original)
[tool.yapf]
column_limit = 119
indent_width = 4
use_tabs = false

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "W"]
